# ArduinoMacropad

./: README.md
Arduino/: keypad.ino
Python/: macro.py  pyproject.toml  run_macro.bat  run_macro.ps1
